[gd_scene load_steps=8 format=3 uid="uid://bymvaawdbd2jj"]

[ext_resource type="Theme" uid="uid://c0ojmupfgnqa3" path="res://shared/ui/themes/invisible_background_button.tres" id="1"]
[ext_resource type="Script" uid="uid://t603ys86hc05" path="res://shared/ui/thinking_ui/thinking_ui_card/thinking_ui_card.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://ccw1dksea3866" path="res://shared/assets/ui_icons/Frame_selected_active.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cghfk07doufaq" path="res://shared/ui/Icons/ICO_0026_Words.png" id="4"]
[ext_resource type="Theme" uid="uid://dhhfdgr1gdgrb" path="res://shared/assets/themes/character_speech_text.theme" id="5"]

[sub_resource type="Animation" id="Animation_5ondf"]
resource_name = "requesting_attention"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 7), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 7), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n3xwn"]
_data = {
&"requesting_attention": SubResource("Animation_5ondf")
}

[node name="ScenarioUICard" type="Button"]
custom_minimum_size = Vector2(100, 75)
offset_right = 100.0
offset_bottom = 75.0
scale = Vector2(1.33793, 1.33793)
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("1")
toggle_mode = true
script = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = -5
theme_override_constants/margin_bottom = -5

[node name="Frame" type="NinePatchRect" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3")
draw_center = false
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PuzzleIcon" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("4")
expand_mode = 1
stretch_mode = 5

[node name="PuzzleLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("5")
theme_override_font_sizes/font_size = 15
text = "Characters"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n3xwn")
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
